bug squashing, ripping out old css

--- a/mobile/css/smartboard.css
+++ b/mobile/css/smartboard.css
@@ -19,90 +19,7 @@ body {
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
-}
-#wall.paused {
-  background-color: #aaa;
-}
-#wall #watermark {
-  z-index: 0;
-  position: absolute;
   width: 100%;
-  top: 45%;
-  text-align: center;
-  font-size: 120px;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: white;
-  opacity: 0.4;
-  -webkit-transition: opacity 4s ease 0;
-  -moz-transition: opacity 4s ease 0;
-  transition: opacity 4s ease 0;
-}
-#wall #add-tag-container {
-  position: fixed;
-  bottom: 10px;
-  left: 10px;
-  height: 2em;
-  border-radius: 1em;
-  background-color: #c31fa4;
-  padding: 0;
-  font-size: 20px;
-  min-width: 138px;
-}
-#wall #add-tag-container #add-tag-opener {
-  position: absolute;
-  left: 0;
-  font-size: 20px;
-  margin: 0;
-  white-space: nowrap;
-  z-index: 1;
-  -webkit-transition: all 0.5s ease 0;
-  -moz-transition: all 0.5s ease 0;
-  transition: all 0.5s ease 0;
-}
-#wall #add-tag-container #add-tag-opener:hover {
-  cursor: pointer;
-}
-#wall #add-tag-container #submit-new-tag {
-  border: none;
-  display: inline-block;
-  padding: 7px 15px;
-  background-color: #c31fa4;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 1em;
-  margin: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  visibility: hidden;
-  -webkit-transition: all 0.5s ease 0;
-  -moz-transition: all 0.5s ease 0;
-  transition: all 0.5s ease 0;
-}
-#wall #add-tag-container #new-tag {
-  font-size: 20px;
-  margin: 0;
-  margin-left: 20px;
-  margin-right: 1em;
-  -webkit-transition: all 0.5s ease 0;
-  -moz-transition: all 0.5s ease 0;
-  transition: all 0.5s ease 0;
-  width: 0;
-}
-#wall #add-tag-container.opened #add-tag-opener {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-}
-#wall #add-tag-container.opened #submit-new-tag {
-  visibility: visible;
-}
-#wall #add-tag-container.opened #new-tag {
-  display: inline-block;
-  width: 14em;
-  margin-left: 140px;
-  line-height: 1.7em;
 }
 
 button {
